--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,9 +18,11 @@ jobs:
       - run: echo hello2
       - name: Set up Go env
         uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
       - name: Build
         run: go build -v -o ./
   job2:
     runs-on: ubuntu-latest
     steps:
-      - run: build over 
+      - run: build over
