--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
   ## 具体触发的任务
   job1:
     runs-on: ubuntu-latest
-    container: golang:1.17-alpine
+    #container: golang:1.17-alpine
     # 指定容器运行
     steps:
       - uses: actions/checkout@v2
