--- a/k8s/note.yaml
+++ b/k8s/note.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: note
-          image: sooemma/note:1.0
+          image: sooemma/note:20250616
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
